# ADV.dash

./: .gitignore  ADVdash.code-workspace  ADVdashDev.ini  README.md  codeStorage.txt  esp32-s3-devkitc-1-5inch.json  lv_conf.h  platformio.ini
CAD Files/: AcrilicoINF.dxf  AcrilicoSUP.dxf  AcrilicoSUP2.dxf  BenchTest.stl  CaseSup.stl  CaseSupV2.stl  Caseinf.stl  PCU-8D.STEP
CAD Files/V2/: DashInferior.stl  DashSuperior.stl  DashSuperiorSinF.stl
CAD Files/V3-AKT250/: DifusorGrande.stl  DifusorPequeno.stl  InferiorMoto.stl  InferiorMotoOrejas.stl  SuperiorV2.stl
Can Database/rusEFI+PRO/: rusEFI+PRO_CAN.dbc  (+2 more)
Graphics/: Car dashboard icon set vector.xcf  IconFiel.xcf
SquerLine Project/: ADVdash.sll  ADVdash.spj  ADVdash_events.py  ADVdashold.spj  ADVdashold2.spj  Themes.slt
docs/: Doxyfile
lua/: TT250Lua.txt  dashControllerLua.txt
src/: main.cpp  pcb_def.h  pcb_definitions.h  touch.h
src/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
src/UI/components/: ui_comp_hook.c
src/UI/fonts/: ui_font_ArameBold100.c  ui_font_ArameBold14.c  ui_font_ArameBold20.c  ui_font_ArameBold40.c  ui_font_ArameBold50.c  ui_font_RussoOne14.c  ui_font_RussoOne50.c
src/UI/images/: ui_img_advecu200_png.c  ui_img_arcscale_png.c  ui_img_arcscalenored_png.c  ui_img_arcscalerb_png.c  ui_img_arcscalerr_png.c  ui_img_banner_png.c  ui_img_barscale_png.c  ui_img_barscalerb_png.c  ui_img_barscalered_png.c  ui_img_checkengine_png.c  ui_img_coolant50_png.c  ui_img_coolant_png.c  ui_img_e30_png.c  ui_img_foglight50_png.c  ui_img_foglight_png.c  ui_img_highbean50_png.c  ui_img_highbean_png.c  ui_img_leftarrow50_png.c  ui_img_leftarrow_png.c  ui_img_lowbean50_png.c  ui_img_lowbean_png.c  ui_img_oilpress_png.c  ui_img_pngwing_com_png.c  ui_img_proadvv1amarillo_png.c  ui_img_proup_png.c  ui_img_righarrow50_png.c  ui_img_righarrow_png.c  ui_img_rpmscale_png.c  ui_img_rpmscalet_png.c  ui_img_rpmscalev2_png.c  ui_img_rpmscalev2t_png.c  ui_img_rpmscalev3t_png.c  ui_img_usersett50_png.c
src/UI/screens/: ui_FinalScreen.c  ui_GraphScreen.c  ui_MainScreen.c  ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_SettingsScreen.c  ui_WelcomeScreen.c
(+930 files in other folders)
